# pq-gabi

./: Makefile  README.md  TODO.txt  attribute.go  builder.go  clsignature.go  commitment.go  credential.go  gabi_test.go  go.mod  go.sum  issuer.go  keyshare.go  legacy.go  log.go  main.go  merkle_trace.txt  merkle_trace_multiple_cred.txt  prooflist.go  proofs.go  randomcommitment.go  zkDil_trace.txt  zkDilithium.go
algebra/: matrix.go  poly.go  vec.go
big/: cubic.go
gabikeys/: keys.go  marshaling.go
keyproof/: additionproof.go  additionproof_test.go  almostsafeprimeproduct.go  almostsafeprimeproduct_test.go  disjointprimeproduct.go  disjointprimeproduct_test.go  exp.go  exp_test.go  expstep.go  expstep_test.go  expstepa.go  expstepa_test.go  expstepb.go  expstepb_test.go  issquareproof.go  issquareproof_test.go  multiplicationproof.go  multiplicationproof_test.go  pedersen.go  pedersen_test.go  primepowerproduct.go  primepowerproduct_test.go  primeproof.go  primeproof_test.go  quasisafeprimeproduct.go  quasisafeprimeproduct_test.go  rangeproof.go  rangeproof_test.go  safeprimegen.go  secret.go  squarefree.go  squarefree_test.go  validkeyproof.go  validkeyproof_test.go
poseidon/: grain.go  poseidon.go
rangeproof/: proof.go  proofinterface_test.go  rangeproof_test.go  (+1 more)
zkDilithium/lib/zkDilithiumProof/: Cargo.toml  libzkDilithium.dylib  zkDilithiumProof.h
zkDilithium/lib/zkDilithiumProof/src/: lib.rs
zkDilithium/lib/zkDilithiumProof/src/merklepf/: air.rs  mod.rs  prover.rs
zkDilithium/lib/zkDilithiumProof/src/starkpf/: air.rs  mod.rs  prover.rs
(+56 files in other folders)
